# SmartPlug_IoT_Project

./: README.md
lib/FreeRTOS-KernelV10.6.2/include/: queue.h
mqtt_charger_BackEnd/: charger.py  demo.py  main.py
py/: server.py  testClient.py
smart-plug-v6/: .gitignore  CMakeLists.txt  README.md
smart-plug-v6/Fonts/: FreeMono12pt7b.h  FreeMono18pt7b.h  FreeMono24pt7b.h  FreeMono9pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeMonoBoldOblique12pt7b.h  FreeMonoBoldOblique18pt7b.h  FreeMonoBoldOblique24pt7b.h  FreeMonoBoldOblique9pt7b.h  FreeMonoOblique12pt7b.h  FreeMonoOblique18pt7b.h  FreeMonoOblique24pt7b.h  FreeMonoOblique9pt7b.h  FreeSans12pt7b.h  FreeSans18pt7b.h  FreeSans24pt7b.h  FreeSans9pt7b.h  FreeSansBold12pt7b.h  FreeSansBold18pt7b.h  FreeSansBold24pt7b.h  FreeSansBold9pt7b.h  FreeSansBoldOblique12pt7b.h  FreeSansBoldOblique18pt7b.h  FreeSansBoldOblique24pt7b.h  FreeSansBoldOblique9pt7b.h  FreeSansOblique12pt7b.h  FreeSansOblique18pt7b.h  FreeSansOblique24pt7b.h  FreeSansOblique9pt7b.h  FreeSerif12pt7b.h  FreeSerif18pt7b.h  FreeSerif24pt7b.h  FreeSerif9pt7b.h  FreeSerifBold12pt7b.h  FreeSerifBold18pt7b.h  FreeSerifBold24pt7b.h  FreeSerifBold9pt7b.h  (+12 more)
smart-plug-v6/pico_fota_bootloader/: CMakeLists.txt
smart-plug-v6/src/: CMakeLists.txt  FreeRTOSConfig.h  SharedResources.cpp  SharedResources.h  confirm.html  extra.html  htmldata.c  main.cpp
smart-plug-v6/src/MQTT/: MQTTClient.cpp  MQTTClient.h
smart-plug-v6/src/Network/: NetworkClass.cpp  NetworkClass.h
smart-plug-v6/src/OTA/: Agent.cpp  Agent.h  Request.cpp  Request.h  RequestObserver.cpp  RequestObserver.h  TCPTransport.cpp  TCPTransport.h  Transport.cpp  Transport.h  WifiHelper.cpp  WifiHelper.h  cyw43_firmware.h  files.cmake
smart-plug-v6/src/QRcodeGen/: frame-v2.c  frame-v7.c  qrcode_st7789.cpp  qrcode_st7789.h  qrcodedisplay.cpp  qrcodedisplay.h  qrencode.c  qrencode.h
smart-plug-v6/src/RTC/: RTC.cpp  RTC.h
smart-plug-v6/src/SwIRQ/: irqs.cpp  irqs.h
smart-plug-v6/src/eeprom/: EEPROM.cpp  EEPROM.h
smart-plug-v6/src/html_files/: index.html
smart-plug-v6/src/i2c/: PicoI2C.cpp
smart-plug-v6/src/ipstack/: dhcpserver.c  dhcpserver.h  dnsserver.c  dnsserver.h  lwipopts.h  picow_access_point.c  picow_tls_client.c  tls_common.c
smart-plug-v6/src/st7789_driver/: FreeMono12pt7b.h  st7789.cpp  st7789.h
smart-plug-v6/src/tasks/: adc_task.cpp  adc_task.h  buzzer_task.cpp  buzzer_task.h  common.cpp  common.h  display_task.cpp  display_task.h  eeprom_task.cpp  eeprom_task.h  gpio_input_task.cpp  gpio_input_task.h  gpio_output_task.cpp  gpio_output_task.h  heap_task.cpp  heap_task.h  internet_task.cpp  internet_task.h  ota_task.cpp  ota_task.h  rtc_task.cpp  rtc_task.h  screens.cpp  screens.h
